# traderpilot

./: .coveragerc  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-traderai-rl.txt  requirements-traderai.txt  requirements.txt  setup.ps1  setup.sh  traderpilot.service  traderpilot.service.watchdog
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
build_helpers/: binance_update_lev_tiers.py  extract_config_json_schema.py  publish_docker_arm64.sh  publish_docker_multi.sh  schema.json  traderpilot_client_version_align.py
client/: README.md  pyproject.toml  requirements.txt
client/test_client/: test_rest_client.py
client/traderpilot_client/: __init__.py  client.py  rest_client.py
config_examples/: config_binance.example.json  config_full.example.json  config_kraken.example.json  config_traderai.example.json
docker/: Dockerfile.armhf  Dockerfile.custom  Dockerfile.develop  Dockerfile.jupyter  Dockerfile.plot  Dockerfile.traderai  Dockerfile.traderai_rl
docs/: advanced-backtesting.md  advanced-hyperopt.md  advanced-orderflow.md  advanced-setup.md  backtesting.md  bot-basics.md  bot-usage.md  configuration.md  data-analysis.md  data-download.md  deprecated.md  developer.md  docker_quickstart.md  edge.md  exchanges.md  faq.md  hyperopt.md  index.md  installation.md  leverage.md  lookahead-analysis.md  plotting.md  producer-consumer.md  recursive-analysis.md  rest-api.md  sql_cheatsheet.md  stoploss.md  strategy-101.md  trader-ui.md  (+17 more)
(+396 files in other folders)
